Added Select tag and cities

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css">
-    <title>Document</title>
+    <title>World Clock- Moses Agunbiade</title>
 </head>
 <body>
     <div class="container">
@@ -12,17 +12,40 @@
         <select name="" id="city">
             <option value="">Select a city...</option>
             <option value="current">My Current Location</option>
-            <option value="current">My Current Location</option>
-            <option value="current">My Current Location</option>
-            <option value="current">My Current Location</option>
-            <option value="current">My Current Location</option>
-            <option value="current">My Current Location</option>
+            <option value="current">Lagos</option>
+            <option value="current">New York</option>
+            <option value="current">London</option>
+            <option value="current">Canberra</option>
+            <option value="current">Auckland</option>
         </select>
+        <div id="cities">
+            <div class="city" id="lagos">
+                <div>
+                    <h2>Lagos</h2>
+                    <div class="date"></div>
+                </div>
+                <div class="time"><small>PM</small></div>
+
+            </div>
+
+            <div class="city" id="lagos">
+                <div>
+                    <h2>London</h2>
+                    <div class="date"></div>
+                </div>
+                <div class="time"><small>PM</small></div>
+
+            </div>
+
+
+        </div>
 
     </div>
     <footer>
         <div>
-            Moses
+            This World Clock App is built by <a href="mailto:agunbiademoses2009@gmail.com"> Moses Agunbiade</a>. 
+            It is an open source on <a href="https://github.com/alagbamoses-era/worldClock" target="_blank"> Github</a> and 
+            <a href="https://mosesagunbiade-worldclock.netlify.app/" target="_blank"> Netlify</a>
         </div>
     </footer>
 </body>
