Added time zone cdn and more cities

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.44/moment-timezone-with-data-1970-2030.min.js"></script>
     <link rel="stylesheet" href="src/style.css">
     <title>World Clock- Moses Agunbiade</title>
 </head>
@@ -12,11 +14,15 @@
         <select name="" id="city">
             <option value="">Select a city...</option>
             <option value="current">My Current Location</option>
-            <option value="current">Lagos</option>
-            <option value="current">New York</option>
-            <option value="current">London</option>
-            <option value="current">Canberra</option>
-            <option value="current">Auckland</option>
+            <option value="Australia/Canberra">Canberra</option>
+            <option value="Africa/Lagos">Lagos</option>
+            <option value="Europe/London">London</option>
+            <option value="America/New_York">New York</option>
+            <option value="Asia/Jerusalem">Jerusalem</option>
+            <option value="Africa/Johannesburg">Johannesburg</option>
+            <option value="America/Toronto">Toronto</option>
+            
+            
         </select>
         <div id="cities">
             <div class="city" id="lagos">
