--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             </div>
 
-            <div class="city" id="lagos">
+            <div class="city" id="london">
                 <div>
                     <h2>London</h2>
                     <div class="date"></div>
